--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <span class="letter">і</span>
         <span class="letter">я</span>
     </h1>
+    <div class="cat">
+        <img src="img/cat-nyan.gif" alt="cat-nyan">
+    </div>
 </body>
 
 </html>
